tabela de projetos com Ajax

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -14,7 +14,7 @@
     <ul>
         <a href="{% url 'alunos_lista' %}"><li>Estudantes</li></a>
         <a href="{% url 'propostas_apresentadas' %}"><li>Propostas</li></a>
-        <a href="{% url 'projetos_lista' 'todos' %}"><li>Projetos</li></a>
+        <a href="{% url 'projetos_lista' %}"><li>Projetos</li></a>
         <a href="{% url 'organizacoes_lista' %}"><li>Organizações</li></a>
         <a href="{% url 'todos_parceiros' %}"><li>Parceiros</li></a>
         <a href="{% url 'todos_professores' %}"><li>Professores</li></a>
