--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -9,6 +9,27 @@
   {% load static %}
   {% load class_tag %}
   <script>{% include "tooltip.js" %}</script>
+
+  <style>
+    
+    .data_curta {
+      display: block;
+    }
+    .data_longa {
+      display: none;
+    }
+
+    @media screen and (min-width: 1200px) {
+      .data_curta {
+        display: none;
+      }
+      .data_longa {
+        display: block;
+      }
+    }
+
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -40,18 +61,18 @@
             Og: Contatos nas Organizacoes.
           </small>
         </caption>
-        <thead style="border: 1px solid black; background-color:#CCCCCC;">
+        <thead style="background-color:#CCCCCC;">
           <tr>
-            <th scope="col" style="text-align:center">
+            <th scope="col" style="text-align:center; border: 1px solid black;">
               &#10003;
             </th>
-            <th scope="col" style="text-align:center">
+            <th scope="col" style="text-align:center; border: 1px solid black;">
               Data
             </th>
-            <th scope="col" style="text-align:center">
+            <th scope="col" style="text-align:center; border: 1px solid black;">
               Público
             </th>
-            <th scope="col" style="text-align:center">
+            <th scope="col" style="text-align:center; border: 1px solid black;">
               Título
             </th>
           </tr>
@@ -81,7 +102,10 @@
                   {% endif %}
                 ">
                 {% comment %}{{ configuracao.t0|plus_days:a.delta  }}{% endcomment %}
-                <label for="aviso{{a.id}}">{{a.get_data}}</label>
+                <label for="aviso{{a.id}}">
+                  <span class="data_longa">{{a.get_data}}</span>
+                  <span class="data_curta">{{a.get_data|date:"d/m/y"}}</span>
+                </label>
               </td>
               <td>
                 {% if a.coordenacao %}
@@ -114,7 +138,8 @@
               <th  scope="row">
               </th>
               <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
-                {{a.get_data}}
+                  <span class="data_longa">{{a.get_data}}</span>
+                  <span class="data_curta">{{a.get_data|date:"d/m/y"}}</span>
               </td>
               <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
                 {% if a.tipo_de_evento < 100 %}
