--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -51,6 +51,7 @@
   <form method="post">
     {% csrf_token %}
     {% if avisos %}
+    <div class="table-responsive">
       <table class="table table-sm">
         <caption>
           <small>
@@ -88,13 +89,13 @@
                   {% if a.todos_orientadores %}Or{% endif %}
                   {% if a.contatos_nas_organizacoes %}Og{% endif %}
                 " >
-              <th  scope="row">
+              <th style="vertical-align: middle;" scope="row">
                 <input class="aviso" type="checkbox" id="aviso{{a.id}}" name="aviso{{a.id}}" value="{{a.id}}" 
                 {% if a.realizado %}checked{% endif %}
                 {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
                 >
               </th>
-              <td data-toggle="tooltip" data-html="true" animation="true" title="
+              <td style="vertical-align: middle;" data-toggle="tooltip" data-html="true" animation="true" title="
                   {% if a.tipo_de_evento %}
                     {{a.get_evento}}{%if a.delta >= 0 %}+{%endif%}{{a.delta}}
                   {% else %}
@@ -102,12 +103,12 @@
                   {% endif %}
                 ">
                 {% comment %}{{ configuracao.t0|plus_days:a.delta  }}{% endcomment %}
-                <label for="aviso{{a.id}}">
+                <label style="line-height: 0px;" for="aviso{{a.id}}">
                   <span class="data_longa">{{a.get_data}}</span>
                   <span class="data_curta">{{a.get_data|date:"d/m/y"}}</span>
                 </label>
               </td>
-              <td>
+              <td style="vertical-align: middle;">
                 {% if a.coordenacao %}
                   <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
                 {% endif %}
@@ -124,7 +125,7 @@
                   <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
                 {% endif %}
               </td>
-              <td>
+              <td style="vertical-align: middle;">
                 <a href="{% url 'edita_aviso' a.id %}">
                   {{a.titulo}}
                 </a>
@@ -132,23 +133,23 @@
             </tr>
           {% endif %}
           {% if a|get_class == "Evento" %}
-            <tr class="linha" data-type="
+            <tr style="vertical-align: middle;" class="linha" data-type="
                   {% if a.tipo_de_evento < 100 %}Al{% else %}Co{% endif %}
                   Ev">
               <th  scope="row">
               </th>
-              <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+              <td style="vertical-align: middle;" class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
                   <span class="data_longa">{{a.get_data}}</span>
                   <span class="data_curta">{{a.get_data|date:"d/m/y"}}</span>
               </td>
-              <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+              <td style="vertical-align: middle;" class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
                 {% if a.tipo_de_evento < 100 %}
                   <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Alunos">Al</span>
                 {% else %}
                   <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
                 {% endif %}
               </td>
-              <td style="background-color:{{a.get_color}}">
+              <td style="vertical-align: middle;" style="background-color:{{a.get_color}}">
                 {{a.get_title}}
               </td>
             </tr>
@@ -157,6 +158,7 @@
         {% endfor %}
         </tbody>
       </table>
+      </div>
       <p>&nbsp;</p>
     {% else %}
       <p>Não existem avisos.</p>
