--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -149,7 +149,7 @@
                   <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
                 {% endif %}
               </td>
-              <td style="vertical-align: middle;" style="background-color:{{a.get_color}}">
+              <td style="vertical-align: middle; background-color:{{a.get_color}}">
                 {{a.get_title}}
               </td>
             </tr>
